tests/error-beta-bool-nat.m31.ref
NarrowN is assumed.
File "./error-beta-bool-nat.m31", line 2, characters 26-27: Syntax error
  unknown name N
