tests/error-beta-bool-nat.m31
Parameter NarrowN : Type.
Parameter h : NarrowN == (N -> N).
Parameter danger : NarrowN == (bool -> N).
Check danger.
Check
  let f := (λ (x : N) => x) in
  let f' :=
    beta h in
      f : NarrowN in
  let f' :=
    beta danger in
      f' : bool -> N in
  refl (f' true) : (f' true) == (f : N -> N) ((f' true) : N).
